--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,9 @@
 /* LOADER */
+body{
+  margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .app-spinner {
   display: inline-block;
   width: 50px;
