--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -5,6 +5,21 @@
     align-items: center;
     justify-content: space-between;
   }
+
+  .ul{
+    list-style-type: none;
+    color:red;
+    font-size: 20px;
+  }
+  .div{
+    margin-left: 45vw;
+    margin-top: 20vh;
+    height:300px;
+    width: 300px;
+    border:2px solid black;
+    border-radius: 10px;
+    background-color: #f2f2f2;
+  }
   .logo {
     color: #fff;
     font-size: 35px;
